# EasyNER

./: .editorconfig  .flake8  .gitignore  LICENCE.md  README.md  ToDo.md  config.json  environment.dev.lock.yml  environment.dev.yml  environment.yml  envv.yml  envv2.yml  main.py  mypy.ini  nel.py  pyproject.toml  setup.py
.github/instructions/: copilot-instructions.md.instructions.md  duckdb_multiple_python_threads.instructions.md
data/: Lund-Autophagy-1_articles.json  Lund-COVID-19_plaintext.txt  readme.md
dictionaries/: LU_GS-virus.txt  readme.md  sars-cov-2_synonyms_v2.txt  sars-cov-2_synonyms_v3.txt  variants_v1.txt
easyner/: __init__.py  util.py
easyner/cli/: __init__.py  config_cli.py  main.py
easyner/config/: __init__.py  backup.py  generator.py  manager.py  schema.json  validator.py
easyner/core/: __init__.py  decorators.py  memory_utils.py  module.py
easyner/data_parsers/: duplicate_sentence_analyzer.py  json_statistics.py
easyner/infrastructure/: __init__.py  paths.py
easyner/io/: __init__.py  factory.py  handlers.py  utils.py
easyner/io/converters/: articles_to_datasets.py
easyner/io/database/: __init__.py  connection.py  duckdb_handler.py  manager.py
easyner/io/database/data_model/: hierarchical_manager.py
easyner/io/database/repositories/: __init__.py  article_repository.py  base.py  entity_repository.py  sentence_repository.py
easyner/io/database/schemas/: __init__.py  articles.sql  conversion_log.sql  entities.sql  python_mappings.py  readme.md  sentences.sql
easyner/io/database/services/: __init__.py  data_exchanger.py
easyner/io/database/utils/: __init__.py  column_names.py  sql_utils.py  transaction.py
easyner/io/handlers/: __init__.py  base.py  json_handler.py  parquet_handler.py  sqlite_handler.py
easyner/io/schemas/: pubmed.schema.json
easyner/pipeline/: utils.py
easyner/pipeline/ner/: factory.py  ner_inference.py  ner_main.py  processor.py  utils.py
easyner/pipeline/ner/dictionary_based/: ner_spacy.py
easyner/pipeline/ner/transformer_based/: ner_biobert.py  ner_inference.py
easyner/pipeline/pubmed/: __init__.py  bulk_download_pubmed.py  bulk_unload_pubmed.py  downloader.py  get_abstracts_by_pmids.py  pubmed_bulk.py  pubmed_bulk_downloader.py  pubmed_bulk_loader.py  pubmed_downloader.py  utils.py
easyner/pipeline/pubmed/_dev_utils/: __init__.py  _check_deleted_citations.py  _duplicate_sentence_analyzer.py  _explore_pubmed_data.py  _json_statistics.py
easyner/pipeline/splitter/: __init__.py  loaders.py  message_handler.py  progress.py  readme.md  run_splitter.py  sentence_splitter_duckdb.py  sentence_splitter_multiprocessing.py  splitter.py  splitter_duck_db.py  splitter_processor.py  splitter_pubmed.py  splitter_runner.py  stats_manager.py  strategies.py  tokenizers.py  worker_state.py  writers.py
easyner/utils/: timekeep.py
experiments/: experiments_readme.md  readme.md
experiments/experiment_scripts/: convert_easyner_output_json_to_pubtator.py  count_characters_in_each_corpus.ipynb  entity_merger2.py  evaluate_ner_pubtatorformat.py  get_runtime_for_all_timestamps.ipynb  postprocess_separator_merging.py  remove_NEL_from_biored.ipynb
pubmed_loader/: bulk_downloader_pubmed.py  count_articles_from_json.py  parse_xml.py  pubmed_main.py
results/sample_output/: ner_huner_gene-1.json
results/sample_output/analysis_mtorandtsc1_chemical/: mtorandtsc1_result_chemical.tsv
scripts/: analysis.py  cord_loader.py  downloader.py  entity_merger.py  entity_parser.py  error_detection.py  evals.py  metrics.py  nel.py  ner_biobert.py  ner_main.py  ner_spacy.py  pubmed_bulk.py  readme.md  search.py  splitter.py  splitter_pubmed.py  text_loader.py  util.py
scripts/config/: __init__.py  generator.py  schema.json  validator.py
scripts/data_parsers/: json_diagnostics.py  json_validator.py
scripts/infrastructure/: __init__.py  paths.py
supplementary/: Supplemental_file_8_Lund-Autophagy-2_autophagyandcancer2020-23_20221213.txt  readme.md
supplementary/experiment_scripts/: BERN2_time_experiments.ipynb  Flair_prediction_evaluation.py  convert_easyner_raw_json_to_pubtator.py  convert_hunflair2_pubtator_to_json.py  evaluate_ner_pubtatorformat.py  postprocess_separator_merging.py  preprocess_BERN2_into_evaluation_ready_format.ipynb  preprocess_pubtatorformat.py  readme.md  sonja_BERN2_experiments.ipynb
supplementary/experiment_scripts/runtime_scripts/: predict_hunflair2.py
supplementary/preprocessing_scripts/: CRAFT_preprocessing_spacy.py
supplementary/supplementary/: Supplemental_file_1.docx  Supplemental_file_2.docx  Supplemental_file_7_Lund-Autophagy-1_mtorandtsc1_20220524.txt  supplemental_file_5.docx
tests/: __init__.py  test_config_management.py  test_paths.py
tests/config/: test_config_management.py  test_schema.py
tests/core/: test_memory_utils.py
tests/db/: test_connection.py  test_duplicate_insert.py  test_return.py
tests/infrastructure/: test_paths.py  test_paths_comprehensive.py
tests/io/: __init__.py  test_base.py  test_factory.py  test_handlers.py  test_splitter_integration.py  test_utils.py
tests/pipeline/: __init__.py  test_util.py
tests/pipeline/ner/: conftest.py  test_biobert_processor.py  test_ner_error_handling.py  test_ner_integration.py  test_ner_pipeline.py  test_ner_processors.py  test_ner_utils.py  test_processor_factory.py
tests/pipeline/pubmed/: test_pubmed_xml_parser.py
tests/pipeline/splitter/: __init__.py  pubmed_input.json  pubmed_output.json  test_processor.py  test_progress.py  test_pubmed_splitter.py  test_splitter.py  test_splitter_errors.py  test_splitter_runner.py  test_standard_splitter.py  test_strategies.py  test_tokenizers.py  test_worker_state.py
tutorials/: Tutorial-BioBERT_model_training.ipynb  Tutorial-BioBERT_model_training.md  Tutorial-benchmarking_entitylevel  Tutorial-benchmarking_entitylevel.md  Tutorial-evaluation_tokenlevel.md  Tutorial-pipeline.ipynb  Tutorial-pipeline.md  Tutorial-pipeline.txt  Tutorial_benchmarking_runtime.md  Tutorial_run_and_evaluate_scispacy_models.ipynb  evaluation_tokenlevel.md  readme.md
(+13 files in other folders)
