[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyner"
version = "0.1.0"
description = "Named Entity Recognition for Medical Text"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Aits Labs. Mainly Carl Ollvik Aasa adapted from work by Rafsan Ahmed, Sonja Aits, Salma Kazemi Rashed"}
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools]
packages = ["easyner"]

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "skip"
exclude = '''(?x)(
  ^venv/|
  ^\.venv/|
  ^build/|
  ^dist/
)'''
overrides = [
    { module = "numpy.*", follow_imports = "silent" },
    { module = "pandas.*", follow_imports = "silent" },
]


[tool.flake8]
max-line-length = 79
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    "**/temp/**"
]
select = "E,W,F,N"
ignore = "E203,W503,E501"
per-file-ignores = """
    __init__.py:F401
"""
