[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyner"
version = "0.1.0"
description = "Named Entity Recognition for Medical Text"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Aits Labs. Mainly Carl Ollvik Aasa adapted from work by Rafsan Ahmed, Sonja Aits, Salma Kazemi Rashed"}
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools]
packages = ["easyner"]

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79


[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "skip"
exclude = [
    ".venv",
    "venv",
    "easyner_env",
    "__pycache__",
    "build",
    "dist",
    ".*\\.egg-info",
    ".git",
    "site-packages",
    "temp",
    "experiment_scripts",

# Note that the TOML equivalent differs slightly. It can be either a single string (including a multi-line string) – which is treated as a single regular expression – or an array of such strings.
#
# Array of strings:
#
# [tool.mypy]
# exclude = [
#    "^one\\.py$",  # TOML's double-quoted strings require escaping backslashes
#    'two\.pyi$',  # but TOML's single-quoted strings do not
#    '^three\.',
#]
#
#A single, multi-line string:
#
# [tool.mypy]
# exclude = '''(?x)(
#    ^one\.py$    # files named "one.py"
#    | two\.pyi$  # or files ending with "two.pyi"
#    | ^three\.   # or files starting with "three."
# )'''  # TOML's single-quoted strings do not require escaping backslashes
]

# These are ignored as scripts are being migrated to the new easyner package.
[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Development time for creating as rigerousy typed tests is at this stage
# deemed to be too high. In future we will migrate to a more rigorous typing
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false


[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
]
follow_imports = "silent"


